# feature_enginiring

./: 1_feature_generation.ipynb  2_feature_overview.ipynb  README.md  pyproject.toml
data/: SOL-USD_1d_2024-01-01-2024-12-31_116_feature
